website/static/website/style.css
/* BASE MOBILE */

body, html {
    font-size: 16px;
    background-color: #ffffff;
    margin: 0;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    font-size: 1.5em;
    color: #000000;
    margin: 0;
}

h1 a {
    text-decoration: none;
    color: #000000;
}

h1 .active {
    text-decoration: none;
    color: #246cbe;
}

h1 a:hover {
    text-decoration: underline;
}

h2 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    font-size: 1.125em;
    color: #000000;
    margin-top: .3em;
    margin-bottom: .3em;
}


h3 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 500;
    font-size: 1.063em;
}

p, li, figure, blockquote, label {
    font-family: 'Raleway', sans-serif;
    font-size: 1.1em;
    line-height: 1.5em;
    color: #000000;
}

figure {
    font-size: .8em;
    font-style: italic;
    width: 100%;
    margin: 0 auto;
    line-height: 1.6em;
}

figure img {
    width: 100%;
}

p a, li a {
    color: #246cbe;
    text-decoration: none;
}

p b {
    font-weight: 600;
}

hr {
    border: none;
    height: 1px;
    background-color: #979797;
}

nav {
    overflow: hidden;
    position: relative;
}

nav a {
    font-family: 'Open Sans', sans-serif;
    color: black;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 1.1em;
    font-weight: 600;
    display: block;
    padding-inline-start: 1.5%;
}

#links {
    display: None;
}

#links.active {
    display: block;
}

#top-link {
    width: 50%;
}

#hamburger {
    display: block;
    position: absolute;
    right: 0;
    top: 0;
    padding-top: 15px;
    padding-right: 10px;
}

#hamburger > * {
    width: 20px;
    height: 3px;
    background-color: black;
    margin: 3px 0;
}

main {
    width: 100%;
    height: 100vh;
    margin: 0 auto;
}

#banner {
    width: 100%;
    height: auto;
    margin-bottom: 2%;
}

main section {
    display: block;
    margin: 3%;
}

/* TODO delete this when done with Soundslice demo video */
#lesson {
    display: block;
    position: relative;
    width: 99%;
    margin: 3% auto;
    overflow: hidden;
}

/* HOME MOBILE */

section aside img {
    display: none;
}

#mobile-diagram {
    display: block;
    width: 25%;
    margin: 0 auto;
}

/* BIO MOBILE */

#bio-content {
    width: 100%;
}

.bio-row {
    display: block;
    position: relative;
    width: 99%;
    margin: 3% auto;
    overflow: hidden;
}

.bio-row:nth-of-type(2) .bio-box-a {
    width: 46%;
    margin: 0 1.5%;
    float: left;
}

.bio-row:nth-of-type(2) .bio-box-b {
    width: 46%;
    margin: 0 1.5%;
    float: right;
}

.bio-box-a, .bio-box-b {
    display: block;
    position: relative;
    width: 90%;
    margin: 0 auto;
}

.bio-row img {
    width: 100%;
}

/* MY-WORK MOBILE */

#work-content {
    width: 100%;
    margin: 0 auto;
}

.work-row {
    display: block;
    position: relative;
    width: 90%;
    margin: 0 auto;
    text-align: center;
}

.work-row:first-of-type {
    text-align: left;
}

.worksamplebut {
    display: inline-block;
    width: 30%;
    margin: 1%;
}

.work-img {
    display: inline-block;
    object-fit: cover;
    object-position: 20% 10%;
    width: 100px;
    height: 100px;
}

#transcriptions {
    width: 80%;
    margin: 0 auto;
    text-align: center;
}

#transcriptions p {
    text-align: left;
    font-size: .9em;
}

#transcriptions img {
    width: 15%;
}

#overlay {
    position: fixed;
    display: block;
    top: 100%;
    width: 100vw;
    height: 100vh;
    background-color: rgba(255, 255, 255, 0.99);
    z-index: 100;
    transition: top .7s;
}

#overlay.active {
    top: 0%;
}

#work-articles {
    text-align: center;
    height: 89%;
}

.work-essay {
    height: 96%;
    text-align: center;
    margin-top: 2%;
    overflow-y: scroll;
    overflow-x: hidden;
}

.work-essay p, .work-essay ul {
    text-align: left;
    width: 98%;
}

.work-essay p:first-of-type {
    text-align: center;
}

.work-essay iframe {
    width: 100%;
    height: 30%;
}

#work-close {
    display: block;
    text-align: center;
    font-size: .9em;
}


/* BLOG MOBILE */

#entry-date {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    font-size: 1em;
    color: #000000;
    margin: 0;
}

.footnote {
    vertical-align: super;
    font-size: .7em;
}

#references {
    list-style: none;
}

#references .footnote {
    vertical-align: initial;
    font-size: 1em;
    padding-right: 6px;
}

article.blog-entry {
    width: 85%;
    margin: 0 auto;
}

article.blog-entry > h1 {
    font-size: 2.188em;
    line-height: 1.7em;
    text-align: center;
    color: #163441;
}

article.blog-entry > h2 {
    font-size: 1.5em;
    line-height: 2em;
    text-align: center;
    color: #163441;
}

article.blog-entry > h3 {
    font-size: 1.375em;
    line-height: 1.875em;
    text-align: center;
    text-decoration: underline;
}

article.blog-entry > p {
    font-size: 1.313em;
    line-height: 1.875em;
}

blockquote {
    border-left: 6px solid #163441;
    padding-left: 15px;
}

/* SHOWS MOBILE */

#show-h1 {
    margin-left: 20px;
    margin-bottom: 10px;
}

.show {
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 20px;
    padding-right: 20px;
    font-family: 'Open Sans', sans-serif;
    border-style: solid;
    border-width: 0px 0px 1px 0px;
    border-color: #a8a8a8;;
}

.show:first-of-type {
    border-width: 1px 0px 1px 0px;
}

.date {
    display: block;
}

.day {
    font-size: 60px;
    letter-spacing: -5px;
    margin-right: 4px;
}

.month {
    font-size: 30px;
    font-weight: 600;
}

.weekday {
    font-size: 30px;
    font-weight: 100;
}

.show-description {
    font-size: 16px;
    font-weight: 600;
    margin-bottom: 6px;
}

.show-description::after {
    content: ' / ';
}

.venue-info {
    font-size: 16px;
    font-weight: 400;
    color: rgba(0, 0, 0, 0.63);
}

.venue-info a {
    text-decoration: underline;
    color: rgba(0, 0, 0, 0.63);
}

/* LANDSCAPE QUERY */
@media screen and (min-width: 660px) {

    /* MY WORK LANDSCAPE */

    #work-content {
        width: 95%;
    }

    .work-row {
        width: 100%;
    }

    .worksamplebut {
        display: inline-block;
        width: 27%;
        margin: .5%;
    }

    .work-img {
        display: inline-block;
        width: 100%;
        height: 100%;
    }

    /* The following staggers the width of the thumbnails so that one in each row is extra-wide. */
    .work-row:nth-of-type(2) .worksamplebut:nth-of-type(2), .work-row:nth-of-type(3) .worksamplebut:nth-of-type(1), .work-row:nth-of-type(4) .worksamplebut:nth-of-type(3) {
        width: 40%;
    }

    .work-essay iframe {
        width: 100%;
        height: 330px;
    }

}

/* DESKTOP QUERY */
@media screen and (min-width: 820px) {

    /* BASE DESKTOP */

    body, html {
        height: 100%;
        margin: 0;
    }

    #content {
        width: 60%;
        margin: 0 auto;
    }

    nav {
        width: 100%;
        margin: 0 auto;
        overflow: hidden;
        position: relative;
    }

    
    #links {
        display: inline-block;
        position: absolute;
        right: 0;
        height: 53px;
        padding-top: 6.5px;
    }

    nav a {
        display: inline-block;
        font-family: 'Open Sans', sans-serif;
        font-weight: 600;
        font-size: 1em;
        text-decoration: none;
        color: #000000;
        padding-inline-start: 1.125em;
    }

    /* Corey Richardson 'logo.' */
    nav > a {
        font-size: 1.4em;
        float: left;
        padding-inline-start: 0;
    }

    #links a:last-child {
        padding-inline-end: 0;
    }

    #hamburger {
        display: none;
    }

    h1 {
        font-family: 'Open Sans', sans-serif;
        font-weight: 600;
        font-size: 1.313em;
        color: #000000;
        margin-top: .3em;
        margin-bottom: .3em;
    }

    h2 {
        font-family: 'Open Sans', sans-serif;
        font-weight: 600;
        font-size: 1.125em;
        color: #000000;
        margin-top: .3em;
        margin-bottom: .3em;
    }


    h3 {
        font-family: 'Open Sans', sans-serif;
        font-weight: 500;
        font-size: 1.063em;
    }

    p, li {
        font-family: 'Raleway', sans-serif;
        font-size: 1.1em;
        line-height: 1.5em;
        color: #000000;
    }

    p a, li a {
        color: #246cbe;
        text-decoration: none;
    }

    p b {
        font-weight: 600;
    }

    hr {
        border: none;
        height: 1px;
        background-color: #979797;
    }

    /* HOME DESKTOP */

    main {
        width: 100%;
        height: 100vh;
        margin: 0 auto;
    }

    #banner {
        width: 100%;
        height: auto;
        margin-bottom: 2%;
    }

    #home-content {
        width: 100%;
        margin: 0 auto;
    }

    main section {
        margin: 0;
    }

    main article {
        float: left;
        width: 70%;
    }

    main aside {
        float: right;
        width: 25%;
    }

    section aside img {
        display: block;
        width: 80%;
        height: auto;
        float: right;
    }

    #mobile-diagram {
        display: none;
    }

    /* BIO DESKTOP */

    #bio-content {
        width: 85%;
        margin: 0 auto;
    }

    #bio-content p, #bio-content li {
        font-size: .95em;
        line-height: 1.5em;
    }

    #bio-content h2 {
        margin-top: 0;
    }

    .bio-row {
        display: block;
        position: relative;
        width: 99%;
        margin: 3% auto;
        overflow: hidden;
    }

    .bio-row:first-of-type {
        margin: 0 auto;
    }

    .bio-box-a {
        width: 46%;
        margin: 0 1.5%;
        float: left;

    }

    .bio-box-b {
        width: 46%;
        margin: 0 1.5%;
        float: right;
    }

    .bio-row img {
        width: 100%;
    }

    /* The following two styles stagger the left/right placement of every other bio section. */
    .bio-row:nth-of-type(3) .bio-box-a, .bio-row:nth-of-type(5) .bio-box-a, .bio-row:nth-of-type(7) .bio-box-a {
        float: right;
    }

    .bio-row:nth-of-type(3) .bio-box-b, .bio-row:nth-of-type(5) .bio-box-b, .bio-row:nth-of-type(7) .bio-box-b {
        float: left;
    }

    /* MY-WORK DESKTOP */

    #work-content {
        width: 85%;
        margin: 0 auto;
    }

    #overlay {
        width: 60%;
        height: 100vh;
        margin: 0 auto;
    }

    #work-articles {
        margin: 0 auto;
        width: 85%;
    }

    .work-essay {
        width: 100%;
    }

    .work-essay iframe {
        width: 100%;
        height: 400px;
    }

    .work-essay figure {
        width: 70%;
    }

    #transcriptions {
        width: 60%;
        margin-bottom: 2%;
    }
    
    #transcriptions p {
        text-align: left;
        font-size: .9em;
    }
    
    #transcriptions img {
        width: 10%;
    }

    /* SHOWS DESKTOP */

    #show-h1 {
        margin-left: 0;
    }

    .show {
        display: inline-block;
        padding-left: 0;
        padding-right: 0;
        width: 100%;
    }

    .date {
        display: inline-block;
    }

    .day {
        font-size: 40px;
    }

    .month {
        font-size: 18px;
    }

    .weekday {
        font-size: 18px;
    }

    .description {
        display: block;
        font-size: 15px;
        width: 100%;
        position: relative;
    }

    .venue-info {
        right: 0px;
        position: absolute;
    }

    .show-description::after {
        content: '';
    }

    .venue-info a:hover {
        color: rgb(0, 0, 0);
    }
}

